--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap" rel="stylesheet">
     <title>GStation</title>
+    <link href="/server/main.css" rel="stylesheet">
 </head>
 <body>
     <div class="row">
@@ -32,7 +33,7 @@
             </main>
         </div>
     </div>
-    <script src="/../dist/vendor-bundle.js"></script>
-    <script src="/../dist/main-bundle.js"></script>
+    <script src="/../server/vendor-bundle.js"></script>
+    <script src="/../server/main-bundle.js"></script>
 </body>
 </html>
