--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <main class="site-main">
                 <section class="site-main__section">
                     <p id="subtitle">
-                        California Product Design and Development Incubator
+                        California Product Design and Development Incubator and Accelerator
                         <br>
                         Workspaces Coming Soon
                     </p>
