added tags for dev server

--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+        <link href="/server/main.css" rel="stylesheet">
+
 </head>
 <body>
     <!-- Who Am I girl -->
@@ -42,5 +44,7 @@
     </form>
   </div>
 </nav>
+    <script src="/../server/vendor-bundle.js"></script>
+    <script src="/../server/main-bundle.js"></script>
 </body>
 </html>
